deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: vipuldadgal/app:latest
          ports:
            - containerPort: 80
  strategy:
    type: RollingUpdate
